guestDialog + guestWindow + small changes

--- a/src/main/resources/languages_cs_CZ.properties
+++ b/src/main/resources/languages_cs_CZ.properties
@@ -22,7 +22,7 @@ room=Pokoj
 price=Cena
 change=Zm\u011bnit
 unavailable=Obsazen\u00e1
-filtered_rooms=\ nalezen\u00fdch pokoj\u016f
+filtered_rooms=Nalezen\u00fdch pokoj\u016f
 has_balcony=M\u00e1 balkon
 name=Jm\u00e9no
 guest=Host
@@ -30,3 +30,6 @@ exit=Ukon\u010dit
 manage_guests=Spravovat host\u016f
 manage_rooms=Spravovat pokoje
 remove_accommodation=Zru\u0161it ubytov\u00e1n\u00ed
+arrival=P\u0159\u00edchod
+departure=Odchod
+filtered_guests=Nalezen\u00fdch host\u016f
