--- a/src/main/resources/languages_en_GB.properties
+++ b/src/main/resources/languages_en_GB.properties
@@ -22,7 +22,7 @@ room=Room
 price=Price
 change=Change
 unavailable=Unavailable
-filtered_rooms=\ filtered rooms
+filtered_rooms=Filtered rooms
 has_balcony=Has balcony
 name=Name
 guest=Guest
@@ -30,3 +30,6 @@ exit=Exit
 manage_guests=Manage guests
 manage_rooms=Manage rooms
 remove_accommodation=Remove accommodation
+arrival=Arrival
+departure=Departure
+filtered_guests=Filtered guests
