--- a/src/main/resources/languages_sk_SK.properties
+++ b/src/main/resources/languages_sk_SK.properties
@@ -22,7 +22,7 @@ room=Izba
 price=Cena
 change=Zmeni\u0165
 unavailable=Obsaden\u00e1
-filtered_rooms=\ n\u00e1jden\u00fdch izieb
+filtered_rooms=N\u00e1jden\u00fdch izieb
 has_balcony=M\u00e1 balk\u00f3n
 name=Meno
 guest=Hos\u0165
@@ -30,3 +30,6 @@ exit=Ukon\u010di\u0165
 manage_guests=Spravova\u0165 host\u00ed
 manage_rooms=Spravova\u0165 izby
 remove_accommodation=Zru\u0161i\u0165 ubytovanie
+arrival=Pr\u00edchod
+departure=Odchod
+filtered_guests=N\u00e1jden\u00fdch host\u00ed
