--- a/src/main/resources/languages_cs_CZ.properties
+++ b/src/main/resources/languages_cs_CZ.properties
@@ -33,3 +33,5 @@ remove_accommodation=Zru\u0161it ubytov\u00e1n\u00ed
 arrival=P\u0159\u00edchod
 departure=Odchod
 filtered_guests=Nalezen\u00fdch host\u016f
+NUMBER_EXISTS=Pokoj se stejn\u00fdm \u010d\u00edslem ji\u017e existuje
+WRONG_NUMBER_OF_BEDS=Pokoj nem\u016f\u017ee m\u00edt m\u00e9n\u011b l\u016f\u017eek ne\u017e ubytovan\u00fdch host\u016f
