--- a/src/main/resources/languages_sk_SK.properties
+++ b/src/main/resources/languages_sk_SK.properties
@@ -33,3 +33,5 @@ remove_accommodation=Zru\u0161i\u0165 ubytovanie
 arrival=Pr\u00edchod
 departure=Odchod
 filtered_guests=N\u00e1jden\u00fdch host\u00ed
+NUMBER_EXISTS=Izba s rovnak\u00fdm \u010d\u00edslom u\u017e existuje
+WRONG_NUMBER_OF_BEDS=Izba nem\u00f4\u017ee ma\u0165 menej postel\u00ed ne\u017e ubytovan\u00fdch host\u00ed
