--- a/src/main/resources/languages_sk_SK.properties
+++ b/src/main/resources/languages_sk_SK.properties
@@ -35,3 +35,5 @@ departure=Odchod
 filtered_guests=N\u00e1jden\u00fdch host\u00ed
 NUMBER_EXISTS=Izba s rovnak\u00fdm \u010d\u00edslom u\u017e existuje
 WRONG_NUMBER_OF_BEDS=Izba nem\u00f4\u017ee ma\u0165 menej postel\u00ed ne\u017e ubytovan\u00fdch host\u00ed
+set_a_guest=Vybrat hos\u0165a
+set_a_room=Vybra\u0165 izbu
