--- a/src/main/resources/languages_cs_CZ.properties
+++ b/src/main/resources/languages_cs_CZ.properties
@@ -37,3 +37,4 @@ NUMBER_EXISTS=Pokoj se stejn\u00fdm \u010d\u00edslem ji\u017e existuje
 WRONG_NUMBER_OF_BEDS=Pokoj nem\u016f\u017ee m\u00edt m\u00e9n\u011b l\u016f\u017eek ne\u017e ubytovan\u00fdch host\u016f
 set_a_guest=Vybrat hosta
 set_a_room=Vybrat izbu
+DEPARTURE_AFTER_ARRIVAL=Odchod mus\u00ed b\u00fdt pozd\u011bji ne\u017e p\u0159\u00edchod
