--- a/src/main/resources/languages_sk_SK.properties
+++ b/src/main/resources/languages_sk_SK.properties
@@ -37,3 +37,4 @@ NUMBER_EXISTS=Izba s rovnak\u00fdm \u010d\u00edslom u\u017e existuje
 WRONG_NUMBER_OF_BEDS=Izba nem\u00f4\u017ee ma\u0165 menej postel\u00ed ne\u017e ubytovan\u00fdch host\u00ed
 set_a_guest=Vybrat hos\u0165a
 set_a_room=Vybra\u0165 izbu
+DEPARTURE_AFTER_ARRIVAL=Odchod mus\u00ed by\u0165 nesk\u00f4r ako pr\u00edchod
